--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^3.1.2",
+    "primeicons": "^6.0.1",
+    "primeng": "^15.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
